--- a/css/components/progress-bar.css
+++ b/css/components/progress-bar.css
@@ -5,10 +5,10 @@
 }
 
 .progress-bar::-webkit-progress-bar {
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .progress-bar::-webkit-progress-value {
-    background-color: #7c5e99;
-}        
-      }
+  background-color: #7c5e99;
+}
+
