--- a/css/components/section.css
+++ b/css/components/section.css
@@ -9,9 +9,10 @@
   padding-bottom: 100px;
 }
 
-.section .container {
-  border: 2px solid red;
-  width: 960px;
-  height: 480px;
-  margin-top: 60px;
+.section.-bgBlack {
+  background-color: #000;
+}
+
+.section.-bdFirst {
+  border-color: #f25a70;
 }
